--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,18 @@ name = "ip-macro"
 version = "0.1.0"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
+license = "MIT/Apache-2.0"
+documentation = "https://docs.rs/ip-macro"
+repository = "https://github.com/lfairy/ip-macro"
+description = "Macros for writing IP addresses"
+categories = ["network-programming", "rust-patterns"]
+
+[dependencies]
+quote = "*"
+syn = "*"
+
 [lib]
-plugin = true
+proc-macro = true
+
+[badges]
+travis-ci = { repository = "lfairy/ip-macro" }
